Aggiornato progetto con i nuovi sorgenti